# recommender-systems-from-zero

./: LICENSE  LICENSE-docs  README.md  Why_I_Made_Recommender-Systems-From-Zero.md  pyproject.toml  requirements.txt
data/: README.md
docs/: bibliography.md  datasets.md
docs/advanced/: 01_matrix_factorization_als.md  02_neural_collaborative_filtering.md  02a_lightfm_hybrid_factorization.md  02b_lightfm_feature_engineering.md  02b_neural_collaborative_filtering.md  02c_lightfm_hyperparameter_tuning.md  02d_neural_collaborative_filtering.md  03_two_tower_models.md  04_sequence_based_recommendations.md  05_ranking_and_ltr_intro.md  06_production_overview.md  README.md
docs/basic/: 01_intro.md  02_data_and_interactions.md  03_popularity_baseline.md  04_content_based.md  05_collaborative_filtering.md  06_metrics.md  07_hybrid_recommendations.md  08_common_mistakes.md  09_cold_start.md  README.md
notebooks/advanced/: 00_latent_factors_intuition.ipynb  01_als_implicit.ipynb  02_neural_collaborative_filtering.ipynb  02a_lightfm_hybrid_factorization.ipynb  02b_lightfm_feature_engineering.ipynb  02b_neural_collaborative_filtering.ipynb  02c_lightfm_hyperparameter_tuning.ipynb  02d_neural_collaborative_filtering.ipynb  03_two_tower_model_intro.ipynb  04_sequence_recommender_intro.ipynb  05_retrieval_vs_ranking_toy.ipynb  README.md
notebooks/basic/: 01_intro_dataset.ipynb  02_popularity_baseline.ipynb  05_metrics.ipynb  (+4 more)
tests/: README.md  test_content_based.py  test_hybrid.py  test_item_item.py  test_metrics.py  test_popularity.py  test_sequence_model.py  test_split.py
(+19 files in other folders)
