[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "recsys-basics"
version = "0.1.0"
description = "Course-style recommender systems project for beginners."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Bobrsubr" }
]

[tool.setuptools.packages.find]
where = ["src"]
